Proyecto de Superheroes importado

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,76 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF0000</color>
+    <color name="orange">#FF9800</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="green">#00FF19</color>
+    <color name="turquoise">#00FFCC</color>
+    <color name="blue">#0037FF</color>
+    <color name="purple">#8000FF</color>
+    <!--OPACIDAD RED-->
+    <color name="red20">#33FF0000</color>
+    <color name="red35">#59FF0000</color>
+    <color name="red50">#80FF0000</color>
+    <color name="red65">#A6FF0000</color>
+    <color name="red80">#CCFF0000</color>
+    <!--OPACIDAD ORANGE-->
+    <color name="orange20">#33FF9800</color>
+    <color name="orange35">#59FF9800</color>
+    <color name="orange50">#80FF9800</color>
+    <color name="orange65">#A6FF9800</color>
+    <color name="orange80">#CCFF9800</color>
+    <!--OPACIDAD YELLOW-->
+    <color name="yellow20">#33FFEB3B</color>
+    <color name="yellow35">#59FFEB3B</color>
+    <color name="yellow50">#80FFEB3B</color>
+    <color name="yellow65">#A6FFEB3B</color>
+    <color name="yellow80">#CCFFEB3B</color>
+    <!--OPACIDAD GREEN-->
+    <color name="green20">#3300FF19</color>
+    <color name="green35">#5900FF19</color>
+    <color name="green50">#8000FF19</color>
+    <color name="green65">#A600FF19</color>
+    <color name="green80">#CC00FF19</color>
+    <!--OPACIDAD TURQUOISE-->
+    <color name="turquoise20">#3300FFCC</color>
+    <color name="turquoise35">#5900FFCC</color>
+    <color name="turquoise50">#8000FFCC</color>
+    <color name="turquoise65">#A600FFCC</color>
+    <color name="turquoise80">#CC00FFCC</color>
+    <!--OPACIDAD BLUE-->
+    <color name="blue20">#330037FF</color>
+    <color name="blue35">#590037FF</color>
+    <color name="blue50">#800037FF</color>
+    <color name="blue65">#A60037FF</color>
+    <color name="blue80">#CC0037FF</color>
+    <!--OPACIDAD PURPLE-->
+    <color name="purple20">#338000FF</color>
+    <color name="purple35">#598000FF</color>
+    <color name="purple50">#808000FF</color>
+    <color name="purple65">#A68000FF</color>
+    <color name="purple80">#CC8000FF</color>
+    <!--OPACIDAD BLACK-->
+    <color name="black20">#33000000</color>
+    <color name="black35">#59000000</color>
+    <color name="black50">#80000000</color>
+    <color name="black65">#A6000000</color>
+    <color name="black80">#CC000000</color>
+    <!--OPACIDAD WHITE-->
+    <color name="white20">#33FFFFFF</color>
+    <color name="white35">#59FFFFFF</color>
+    <color name="white50">#80FFFFFF</color>
+    <color name="white65">#A6FFFFFF</color>
+    <color name="white80">#CCFFFFFF</color>
+
+    <!--SuperheroApp-->
+    <color name="superhero_stat_intelligence">#00ff00</color>
+    <color name="superhero_stat_strength">#FF0000</color>
+    <color name="superhero_stat_speed">#E88B00</color>
+    <color name="superhero_stat_durability">#03A9F4</color>
+    <color name="superhero_stat_power">#FFEB3B</color>
+    <color name="superhero_stat_combat">#673AB7</color>
+    <color name="hint">#E8D0ED</color>
+
+    <color name="settings_text_title">#A177C5</color>
 </resources>
